--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <p class="para1">Gain access to our full library of tutorials along with expert code reviews.Perfect for any developers who are serious about honing their skills.</p>
     </section>
 
-
-
+  <div class="section2">
     <section class="second">
         <h3 class="head2">Monthly Subscription</h3>
         <h5> <span> $29 </span> per month</h5>
@@ -29,5 +28,6 @@
      <h3 class="head3">Why Us</h3>
      <p class="para3">Tutorials by industry experts <br> Peer & expert code review <br> Coding exercises <br> Access to our Github repos <br> Community forum Flashcard decks <br> New videos every week</p>
     </section>
+  </div>
 </body>
 </html>
