--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+  <section class="container">
     <section  class="first">
     <h2> join our community </h2>
     <h4 class="head1">30-day, hassle-free money back guarantee</h4>
@@ -27,7 +28,7 @@
     <section class="third">
      <h3 class="head3">Why Us</h3>
      <p class="para3">Tutorials by industry experts <br> Peer & expert code review <br> Coding exercises <br> Access to our Github repos <br> Community forum Flashcard decks <br> New videos every week</p>
-    </section>
+    </section> </section>
   </div>
 </body>
 </html>
